# OpenGL_mini_Project

./: CMakeLists.txt  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h
